--- a/css/styles.css
+++ b/css/styles.css
@@ -366,7 +366,7 @@ display: flex;
 .hero {
    
     background-image: linear-gradient(to top,  rgba(47, 48, 58, 0.4),  rgba(47, 48, 58, 0.4)), url(
-        /goit-markup-hw-04/images/hero-bg.jpg);
+        ../images/hero-bg.jpg);
     
     background-repeat: no-repeat;
     background-position: center;
