--- a/css/styles.css
+++ b/css/styles.css
@@ -1316,6 +1316,7 @@ text-align: center;
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
     background-color: var(--white-color);
+    cursor: pointer;
 }
 
 .filtres-top-wrap {
